force-app/main/default/objects/TO_DO_Items__c/TO_DO_Items__c.object-meta.xml
<CustomObject>
    <description>Object to Handle TODO items for Each Project Milestones</description>
    <label>TO-DO Items</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TO-DO Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>