force-app/main/default/objects/TO_DO_Items__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Due Date for Each TODO Item.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>