force-app/main/default/objects/TO_DO_Items__c/fields/Project_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Project_Milestones__c</fullName>
    <description>Field to link TODO Items With Each Project Milestones</description>
    <label>Project Milestones</label>
    <referenceTo>Project_Milestones__c</referenceTo>
    <relationshipLabel>TO-DO Items</relationshipLabel>
    <relationshipName>TO_DO_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>